# Pseudolife-MCP

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml  server.json
.claude/: launch.json
.claude-plugin/: marketplace.json
docs/: 2026-06-21-fresh-eyes-review.md  2026-06-21-neural-memory-investigation.md  README.md  cortex-mcp-spec.md
evals/: README.md  band_ablation.py  bench_diffusiongemma.ps1  capture_metrics.py  dg_shim.py  distill_clean.py  distill_datagen.py  distill_datagen_arm1.py  distill_datagen_sonnet.py  distill_merge_e4b.py  distill_train_e4b.py  gate_e4b_ft.ps1  gate_window.ps1  ladder_sweep.py  lesson_synthesis_bench.py  lme_v2_adapter.py  lme_v2_check0.py  lme_v2_check1_client.py  lme_v2_check_fixd.py  lme_v2_smoke.py  longmemeval_bench.py  memcot_bench.py  neural_blend_bench.py  overnight_band_wabl.ps1  overnight_lme_v2.ps1  overnight_longmemeval.ps1  overnight_qat_ornith.ps1  overnight_replicates.ps1  overnight_run.ps1  overnight_status.ps1  preflight_overnight.ps1  rebuild_contexts.py  regression_gate.ps1  relation_extraction_bench.py  relations_bench.py  replicate.py  retention_bench.py  retrieval_sweep.py  seed_bench.py  sonnet_shim.py  (+2 more)
examples/: .mcp.json  CLAUDE.memory.md
ops/: .env.example  Dockerfile.daemon  Dockerfile.extractor  Dockerfile.pg  backfill_edge_confidence.py  backup.ps1  backup.sh  dedup_cortex.py  docker-compose.yml  install-autostart.ps1  install-hook.ps1  install-hook.sh  install-shim-autostart.ps1  install-shim-autostart.sh  install.ps1  install.sh  migrate_drop_age.py  migrate_v04.py  preflight.ps1  preflight.sh  prune-rollbacks.ps1  prune-rollbacks.sh  requirements.lock.txt  restore.ps1  restore.sh  restore_from_pt.py  retire_by_writer.py  update.ps1  update.sh  wslconfig.example
plugin/: .mcp.json  README.md
pseudolife_memory/: __init__.py  briefing_cli.py  cli.py  daemon.py  episode_cli.py  graph.py  mcp_server.py  service.py  session_title.py  shim.py  toolset_tiers.py  writer_context.py
tests/: conftest.py  pg_fixtures.py  test_abstain.py  test_access_count_semantics.py  test_atomic_weights.py  test_backfill_edge_confidence.py  test_band_ablation_flat.py  test_band_cosine.py  test_bm25.py  test_briefing.py  test_cli_dispatch.py  test_client_install_ux.py  test_compaction.py  (+99 more)
(+457 files in other folders)
