[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pseudolife-mcp"
version = "0.7.0"
description = "PseudoLife persistent long-term memory exposed as an MCP server for Claude Code"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}

# Core deps — same memory stack as PseudoLife (torch + MIRAS + ChromaDB),
# minus the LLM backends, FastAPI, and Electron-side machinery. MCP SDK on
# top so Claude Code can attach over stdio.
dependencies = [
    "torch>=2.1.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "chromadb>=0.5.0",
    "mcp>=1.0.0",
    "pypdf>=4.0",
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
    "uvicorn>=0.30",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
# NLI contradiction scorer — heavy (~278 MB DeBERTa-xsmall checkpoint).
# Off by default; the four-path contradiction detector still runs without it.
nli = [
    "transformers>=4.40",
]
# Cross-encoder reranker — small (~80 MB MS MARCO MiniLM-L-6-v2).
# Off by default; flip ``memory.reranker.enabled = True`` in config or
# pass ``rerank=True`` per call to enable. Bumps the floor on
# sentence-transformers so the CrossEncoder API is stable; the rest of
# the codebase already pulls sentence-transformers in for the embedder.
rerank = [
    "sentence-transformers>=2.5",
]
# Optional higher-quality PDF text extraction (Chromium PDFium bindings,
# Apache-2.0/BSD-3). The core pypdf path works without it.
pdf = [
    "pypdfium2>=4",
]
# ONNX embedding backend — ~3x faster single-text encode on CPU with
# bit-identical embeddings. Off by default; set ``embedding.backend =
# "onnx"`` in config to enable (falls back to torch when unavailable).
# sentence-transformers' native ONNX backend delegates to optimum;
# onnxruntime itself is already a transitive dep (ChromaDB).
onnx = [
    "sentence-transformers>=3.2",
    "optimum[onnxruntime]>=1.23",
]

[project.scripts]
pseudolife-mcp = "pseudolife_memory.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pseudolife_memory*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
